[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "limu_py"
version = "0.1.0"
dependencies = ["pybind11"]

[tool.setuptools]
ext-modules = [
    {name = "limu_py", sources = ["src/wrapper.cpp"], include-dirs = ["../include", "../../.venv/lib/python3.12/site-packages/pybind11/include"], library-dirs = ["../lib/x86_64/"], libraries = ["limu_driver"], extra-compile-args = ["-std=c++17"]}
]

[tool.setuptools.package-data]
limu_py = ["../lib/x86_64/liblimu_driver.so"]